<resources>
    <string name="app_name">GiftPlannerApp</string>
    <string name="web_client_id">870735082696-od5hvscifl499du9h6h4l407gttdeuir.apps.googleusercontent.com</string>
    <string name="login_heading">Welcome</string>
    <string name="login_user_name">Email Address</string>
    <string name="login_user_password">Password</string>
    <string name="login_forgot_password">Forgot Password?</string>
    <string name="login_button_text">Login</string>
    <string name="login_or_text">--OR--</string>
    <string name="login_with_google">Login with Google</string>
    <string name="login_donthave_account">Already have an account?</string>
    <string name="login_register_text">Register</string>
    <string name="register_joinus_text">Join Us</string>
    <string name="register_name">Name</string>
    <string name="register_phone_no">Mobile No</string>
    <string name="register_submit_button">Register</string>
    <string name="register_already_account">Already have an account?</string>
    <string name="register_login_text">Login</string>
</resources>